Added instructions for the experience

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
+    <h1>
+      Welcome to this WebXR experience!
+    </h1>
+    <h3>
+      You can interact with the cubes with your mouse. If you'd like more of an immersive experience you can click on VR on the bottom right and connect your VR headset and interact with the environment however you'd like.
+    </h3>
     <div id="unity-container">
       <div id="unity-canvas-container">
         <canvas id="unity-canvas" style="width: 100%; height: 100%;"></canvas>
